แก้ไขหน้า UI ระบบค้นหาโปรโมชั่น - close #162
