# backend/docs/swagger.json
@@ -2625,6 +2625,13 @@
                     "items": {
                         "$ref": "#/definitions/ent.Bookcourse"
                     }
+                },
+                "promotion": {
+                    "description": "Promotion holds the value of the promotion edge.",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ent.Promotion"
+                    }
                 }
             }
         },
@@ -3059,6 +3066,11 @@
         "ent.PromotionEdges": {
             "type": "object",
             "properties": {
+                "course": {
+                    "description": "Course holds the value of the course edge.",
+                    "type": "object",
+                    "$ref": "#/definitions/ent.Course"
+                },
                 "employee": {
                     "description": "Employee holds the value of the employee edge.",
                     "type": "object",
